--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -1,15 +1,22 @@
 {
   "name": "@kui-shell/proxy",
   "version": "0.1.0",
+  "description": "Kui package that offers a proxy server",
   "author": "Nick Mitchell",
   "license": "Apache-2.0",
-  "description": "Kui package that offers a proxy server",
+  "bugs": {
+    "url": "https://github.com/IBM/kui/issues/new"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IBM/kui.git"
+  },
   "keywords": [
     "kui",
     "plugin"
   ],
+  "main": "bin/www",
   "scripts": {
-    "start-local": "node ./bin/www",
     "preinstall": "rm -rf node_modules/@kui-shell",
     "build": "./build.sh",
     "build-docker": "docker build . -t kui-proxy",
