--- a/plugins/plugin-manager/package.json
+++ b/plugins/plugin-manager/package.json
@@ -2,16 +2,30 @@
   "name": "@kui-shell/plugin-manager",
   "version": "0.0.2",
   "description": "Support for field installation of plugins",
-  "main": "plugin/plugin.js",
+  "license": "Apache-2.0",
+  "author": "Nick Mitchell",
+  "homepage": "https://github.com/IBM/kui#readme",
+  "bugs": {
+    "url": "https://github.com/IBM/kui/issues/new"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IBM/kui.git"
+  },
   "keywords": [
     "kui",
     "plugin"
   ],
-  "author": "Nick Mitchell",
   "contributors": [
     "Lionel Villard"
   ],
-  "license": "Apache-2.0",
+  "main": "build/src/plugin.js",
+  "files": [
+    "build"
+  ],
+  "scripts": {
+    "prepublish": "rm -rf build && cp -r ../../build/plugins/$(basename `pwd`) build"
+  },
   "dependencies": {
     "fs-extra": "^7.0.1",
     "tmp": "0.0.33",
