--- a/plugins/plugin-openwhisk/package.json
+++ b/plugins/plugin-openwhisk/package.json
@@ -1,19 +1,32 @@
 {
   "name": "@kui-shell/plugin-openwhisk",
   "version": "0.1.0",
-  "description": "IBM Cloud shell plugin for OpenWhisk",
-  "main": "plugin/plugin.js",
+  "description": "Kui plugin for OpenWhisk",
+  "license": "Apache-2.0",
+  "author": "Nick Mitchell",
+  "homepage": "https://github.com/IBM/kui#readme",
+  "bugs": {
+    "url": "https://github.com/IBM/kui/issues/new"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IBM/kui.git"
+  },
   "keywords": [
     "kui",
     "plugin",
-    "openwhisk",
-    "kubernetes"
+    "openwhisk"
   ],
-  "author": "Nick Mitchell",
   "contributors": [
     "Mengting Yan"
   ],
-  "license": "Apache-2.0",
+  "main": "build/src/plugin.js",
+  "files": [
+    "build"
+  ],
+  "scripts": {
+    "prepublish": "rm -rf build && cp -r ../../build/plugins/$(basename `pwd`) build"
+  },
   "dependencies": {
     "adm-zip": "^0.4.13",
     "archiver": "^3.0.0",
