--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,8 @@
   "version": "independent",
   "command": {
     "publish": {
-      "conventionalCommits": true
+      "conventionalCommits": true,
+      "message": "chore(release): publish %s"
     }
   }
 }
