--- a/plugins/plugin-wskflow/package.json
+++ b/plugins/plugin-wskflow/package.json
@@ -35,7 +35,7 @@
     "build"
   ],
   "scripts": {
-    "prepublish": "rm -rf build && cp -r ../../build/plugins/$(basename `pwd`) build"
+    "prepublish": "rm -rf build && mkdir build && tar -C ../../build/plugins/$(basename `pwd`) --exclude '*node_modules*' -cf - . | tar -C build -xf -"
   },
   "webpack-prune": [
     "chokidar"
