--- a/plugins/plugin-editor/package.json
+++ b/plugins/plugin-editor/package.json
@@ -28,7 +28,7 @@
     "build"
   ],
   "scripts": {
-    "prepublish": "rm -rf build && cp -r ../../build/plugins/$(basename `pwd`) build"
+    "prepublish": "rm -rf build && mkdir build && tar -C ../../build/plugins/$(basename `pwd`) --exclude '*node_modules*' -cf - . | tar -C build -xf -"
   },
   "dependencies": {
     "monaco-editor": "^0.14.3",
