--- a/plugins/plugin-openwhisk/package.json
+++ b/plugins/plugin-openwhisk/package.json
@@ -25,7 +25,7 @@
     "build"
   ],
   "scripts": {
-    "prepublish": "rm -rf build && cp -r ../../build/plugins/$(basename `pwd`) build"
+    "prepublish": "rm -rf build && mkdir build && tar -C ../../build/plugins/$(basename `pwd`) --exclude '*node_modules*' -cf - . | tar -C build -xf -"
   },
   "dependencies": {
     "adm-zip": "^0.4.13",
