--- a/plugins/plugin-wskflow/package.json
+++ b/plugins/plugin-wskflow/package.json
@@ -30,12 +30,12 @@
     "@kui-shell/plugin/wskflow/webpack/pre": "bin/prune-for-browser.sh",
     "@kui-shell/plugin/wskflow/webpack/post": "bin/restore-after-prune.sh"
   },
-  "main": "build/src/plugin.js",
+  "main": "dist/src/plugin.js",
   "files": [
-    "build"
+    "dist"
   ],
   "scripts": {
-    "prepublish": "rm -rf build && mkdir build && tar -C ../../build/plugins/$(basename `pwd`) --exclude '*node_modules*' -cf - . | tar -C build -xf -"
+    "prepublishOnly": "rm -rf dist && mkdir dist && tar -C ../../build/plugins/$(basename `pwd`) --exclude package.json --exclude 'tests' --exclude 'src/test'  --exclude '*node_modules*' -hcf - . | tar -C dist -xf -"
   },
   "webpack-prune": [
     "chokidar"
