--- a/plugins/plugin-editor/package.json
+++ b/plugins/plugin-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/plugin-editor",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Kui plugin that integrates the monaco-editor component",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -22,6 +22,15 @@
   "bin": {
     "@kui-shell/plugins/editor/webpack/pre": "bin/prune-for-browser.sh",
     "@kui-shell/plugins/editor/webpack/post": "bin/restore-after-prune.sh"
+  },
+  "webpack": {
+    "entry": {
+      "editor.worker": "./node_modules/monaco-editor/esm/vs/editor/editor.worker.js",
+      "json.worker": "./node_modules/monaco-editor/esm/vs/language/json/json.worker",
+      "css.worker": "./node_modules/monaco-editor/esm/vs/language/css/css.worker",
+      "html.worker": "./node_modules/monaco-editor/esm/vs/language/html/html.worker",
+      "ts.worker": "./node_modules/monaco-editor/esm/vs/language/typescript/ts.worker"
+    }
   },
   "main": "plugin.js",
   "scripts": {
