--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/proxy",
-  "version": "0.5.0",
+  "version": "0.5.9",
   "description": "Kui package that offers a proxy server",
   "author": "Nick Mitchell",
   "license": "Apache-2.0",
@@ -15,19 +15,14 @@
     "kui",
     "plugin"
   ],
-  "main": "bin/www",
+  "bin": {
+    "kui-build-proxy": "./build.sh",
+    "kui-start-proxy": "./bin/start-proxy.sh"
+  },
   "scripts": {
-    "preinstall": "rm -rf node_modules/@kui-shell",
     "build": "./build.sh",
     "build-docker": "docker build . -t kui-proxy",
-    "start": "if [ ! -d node_modules/@kui-shell ]; then echo 'npm run build'; else npm run build-docker; fi; docker run -e DEBUG=$DEBUG --name kui-proxy --rm -p 8081:3000 kui-proxy"
-  },
-  "dependencies": {
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.5",
-    "debug": "^4.1.1",
-    "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "start": "./bin/start-proxy.sh"
   },
   "publishConfig": {
     "access": "public"
