--- a/packages/kui-builder/package.json
+++ b/packages/kui-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/builder",
-  "version": "0.5.0",
+  "version": "0.5.30",
   "description": "Kui plugin development helpers",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -12,14 +12,23 @@
     "url": "git+https://github.com/IBM/kui.git"
   },
   "bin": {
-    "kui-shell-build-headless": "./dist/headless/build.sh",
-    "kui-shell-build-electron": "./dist/electron/build.sh",
-    "kui-shell-build-webpack": "./dist/webpack/build.sh",
-    "kui-shell-compile": "./bin/compile.sh",
+    "kui-webpack-client": "./dist/webpack/bin/webpack-client.sh",
+    "kui-build-headless": "./dist/headless/build.sh",
+    "kui-build-electron": "./dist/electron/build.sh",
+    "kui-build-webpack": "./dist/webpack/build.sh",
+    "kui-init": "./kui-dist-init.js",
+    "kui-compile": "./bin/compile.sh",
+    "kui-link-artifacts.sh": "./bin/kui-link-artifacts.sh",
     "link-source-assets.sh": "./bin/link-source-assets.sh",
     "link-build-assets.sh": "./bin/link-build-assets.sh",
-    "kui-shell-lint": "./bin/lint.sh",
-    "kui-shell-watch": "./bin/watch.sh"
+    "kui-lint": "./bin/lint.sh",
+    "kui-watch": "./bin/watch.sh"
+  },
+  "scripts": {
+    "tsconfig:pack": "cp tsconfig.json tsconfig.prepack.json && node -e 'const pjson=require(`./tsconfig.json`); pjson.compilerOptions.baseUrl=`../../..`; pjson.compilerOptions.outDir=`${pjson.compilerOptions.baseUrl}/build`; delete pjson.compilerOptions.paths; pjson.include=pjson.include.map(s=>`../${s}`); require(`fs`).writeFileSync(`tsconfig.json`, JSON.stringify(pjson, undefined, 2))'",
+    "tsconfig:unpack": "mv tsconfig.prepack.json tsconfig.json",
+    "prepublishOnly": "npm run tsconfig:pack; rm -rf build && mkdir build && tar -C ../../build/packages/$(basename `pwd`)/src --exclude test --exclude node_modules -cf - . | tar -C build -xf - && find build -type l -exec rm {} \\; && cp -a build/* . && chmod +x kui-dist-init.js",
+    "postpack": "npm run tsconfig:unpack; for i in build/*; do rm -rf ./`basename $i`; done"
   },
   "dependencies": {
     "@types/debug": "^0.0.31",
@@ -28,16 +37,16 @@
     "@types/node": "^10.12.18",
     "@types/swagger-schema-official": "^2.0.14",
     "@types/webdriverio": "^4.13.1",
+    "colors": "^1.3.3",
+    "spectron": "^5.0.0",
     "electron": "^4.0.3",
     "electron-download": "^4.1.1",
     "fs-extra": "^7.0.1",
+    "lerna": "^3.10.8",
     "terser": "^3.11.0",
     "tslint": "^5.12.0",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.2.2"
-  },
-  "devDependencies": {
-    "lerna": "^3.10.7"
   },
   "publishConfig": {
     "access": "public"
