--- a/package.json
+++ b/package.json
@@ -3,28 +3,20 @@
   "version": "2.0.3",
   "description": "[![Travis](https://travis-ci.org/ibm-functions/shell.svg?branch=master)](https://travis-ci.org/ibm-functions/shell) [![License](https://img.shields.io/badge/license-Apache--2.0-blue.svg)](http://www.apache.org/licenses/LICENSE-2.0) [![Join Slack](https://img.shields.io/badge/join-slack-9B69A0.svg)](http://slack.openwhisk.org/) [![codecov](https://codecov.io/gh/ibm-functions/shell/branch/master/graph/badge.svg)](https://codecov.io/gh/ibm-functions/shell) [![HitCount](http://hits.dwyl.io/ibm-functions/shell.svg)](http://hits.dwyl.io/ibm-functions/shell)",
   "main": "build/packages/app/src/main/main.js",
-  "bin": {
-    "kui": "bin/kui"
-  },
-  "files": [
-    "bin/",
-    "tests/",
-    "dist/"
-  ],
-  "directories": {
-    "doc": "docs",
-    "test": "tests"
-  },
   "scripts": {
     "lint": "./packages/kui-builder/bin/lint.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "MONOREPO_MODE=true ./packages/kui-builder/bin/compile.sh",
+    "compile": "MONOREPO_MODE=true CLIENT_HOME=./clients/default ./packages/kui-builder/bin/compile.sh",
     "watch": "./packages/kui-builder/bin/watch.sh",
-    "configure": "node packages/kui-builder/lib/configure.js && ./packages/kui-builder/dist/dev/build.sh && ./packages/kui-builder/bin/seticon.js",
-    "hoist-deps": "npx lerna bootstrap --ignore-prepublish --hoist",
-    "postinstall": "export CLOUDSHELL_INSTALL_UI=true; npm run hoist-deps && (cd tests && ./bin/corral.sh && npm install --no-package-lock) && npm run configure && npm run compile && for i in plugins/*; do if [ -d $i/node_modules ]; then (cd build/plugins/`basename $i` && rm -rf node_modules && cp -a ../../../$i/node_modules .); fi; done && (cd tests && ./bin/corral.sh)"
+    "build:configure": "CLIENT_HOME=./clients/default node packages/kui-builder/lib/configure.js && ./packages/kui-builder/dist/dev/build.sh && CLIENT_HOME=./clients/default ./packages/kui-builder/bin/seticon.js",
+    "build:electron-for-development": "(cd tests && ./bin/corral.sh && npm install --no-package-lock) && npm run build:configure && npm run compile && for i in plugins/*; do if [ -d $i/node_modules ]; then (cd build/plugins/`basename $i` && rm -rf node_modules && cp -a ../../../$i/node_modules .); fi; done && (cd tests && ./bin/corral.sh)",
+    "build:hoist": "npx lerna bootstrap --ignore-prepublish --hoist",
+    "postinstall": "npm run build:hoist && npm run build:electron-for-development"
   },
   "dependencies": {},
+  "devDependencies": {
+    "lerna": "^3.10.8"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IBM/kui.git"
