--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,7 +29,7 @@
     "kubectl-kui": "bin/kubectl-kui"
   },
   "scripts": {
-    "prepublishOnly": "rm -rf dist && mkdir dist && tar -C ../../build/packages/$(basename `pwd`)/src --exclude test --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
+    "prepack": "rm -rf dist && mkdir dist && tar -C ../../build/packages/$(basename `pwd`)/src --exclude test --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
     "postpack": "for i in dist/*; do rm -rf ./`basename $i`; done"
   },
   "dependencies": {
