--- a/plugins/plugin-editor/package.json
+++ b/plugins/plugin-editor/package.json
@@ -23,23 +23,26 @@
     "@kui-shell/plugins/editor/webpack/pre": "bin/prune-for-browser.sh",
     "@kui-shell/plugins/editor/webpack/post": "bin/restore-after-prune.sh"
   },
-  "webpack": {
-    "entry": {
-      "editor.worker": "./node_modules/monaco-editor/esm/vs/editor/editor.worker.js",
-      "json.worker": "./node_modules/monaco-editor/esm/vs/language/json/json.worker",
-      "css.worker": "./node_modules/monaco-editor/esm/vs/language/css/css.worker",
-      "html.worker": "./node_modules/monaco-editor/esm/vs/language/html/html.worker",
-      "ts.worker": "./node_modules/monaco-editor/esm/vs/language/typescript/ts.worker"
-    }
-  },
   "main": "plugin.js",
   "scripts": {
-    "prepublishOnly": "rm -rf dist && mkdir dist && tar -C ../../build/plugins/$(basename `pwd`)/src --exclude test --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
+    "prepack": "rm -rf dist && mkdir dist && tar -C ../../build/plugins/$(basename `pwd`)/src --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
     "monaco-editor": "^0.14.3",
     "tmp": "0.0.33"
+  },
+  "kui": {
+    "headless": false,
+    "webpack": {
+      "entry": {
+        "editor.worker": "./node_modules/monaco-editor/esm/vs/editor/editor.worker.js",
+        "json.worker": "./node_modules/monaco-editor/esm/vs/language/json/json.worker",
+        "css.worker": "./node_modules/monaco-editor/esm/vs/language/css/css.worker",
+        "html.worker": "./node_modules/monaco-editor/esm/vs/language/html/html.worker",
+        "ts.worker": "./node_modules/monaco-editor/esm/vs/language/typescript/ts.worker"
+      }
+    }
   },
   "publishConfig": {
     "access": "public"
