--- a/plugins/plugin-wskflow/package.json
+++ b/plugins/plugin-wskflow/package.json
@@ -32,7 +32,7 @@
   },
   "main": "plugin.js",
   "scripts": {
-    "prepublishOnly": "rm -rf dist && mkdir dist && tar -C ../../build/plugins/$(basename `pwd`)/src --exclude test --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
+    "prepack": "rm -rf dist && mkdir dist && tar -C ../../build/plugins/$(basename `pwd`)/src --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "webpack-prune": [
@@ -46,6 +46,9 @@
     "expand-home-dir": "0.0.3",
     "jquery": "^3.3.1",
     "tmp": "0.0.33"
+  },
+  "kui": {
+    "headless": false
   },
   "publishConfig": {
     "access": "public"
