--- a/packages/kui-builder/package.json
+++ b/packages/kui-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/builder",
-  "version": "0.5.32",
+  "version": "0.5.40",
   "description": "Kui plugin development helpers",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -25,10 +25,10 @@
     "kui-watch": "./bin/watch.sh"
   },
   "scripts": {
-    "tsconfig:pack": "cp tsconfig.json tsconfig.prepack.json && node -e 'const pjson=require(`./tsconfig.json`); pjson.compilerOptions.baseUrl=`../../..`; pjson.compilerOptions.outDir=`${pjson.compilerOptions.baseUrl}/build`; delete pjson.compilerOptions.paths; pjson.include=pjson.include.map(s=>`../${s}`); require(`fs`).writeFileSync(`tsconfig.json`, JSON.stringify(pjson, undefined, 2))'",
-    "tsconfig:unpack": "mv tsconfig.prepack.json tsconfig.json",
-    "prepublishOnly": "npm run tsconfig:pack; rm -rf build && mkdir build && tar -C ../../build/packages/$(basename `pwd`)/src --exclude test --exclude node_modules -cf - . | tar -C build -xf - && find build -type l -exec rm {} \\; && cp -a build/* . && chmod +x kui-dist-init.js",
-    "postpack": "npm run tsconfig:unpack; for i in build/*; do rm -rf ./`basename $i`; done"
+    "tsconfig:prepack": "cp tsconfig.json tsconfig.prepack.json; node -e 'const pjson=require(`./tsconfig.json`); pjson.compilerOptions.baseUrl=`../../..`; pjson.compilerOptions.outDir=`${pjson.compilerOptions.baseUrl}/build`; delete pjson.compilerOptions.paths; pjson.include=pjson.include.map(s=>`../${s}`); require(`fs`).writeFileSync(`tsconfig.json`, JSON.stringify(pjson, undefined, 2))'",
+    "tsconfig:postpack": "mv tsconfig.prepack.json tsconfig.json",
+    "prepack": "npm run tsconfig:prepack; rm -rf build && mkdir build && tar -C ../../build/packages/$(basename `pwd`)/src --exclude tsconfig.json --exclude test --exclude node_modules -cf - . | tar -C build -xf - && find build -type l -exec rm {} \\; && cp -a build/* . && chmod +x kui-dist-init.js",
+    "postpack": "npm run tsconfig:postpack; for i in build/*; do rm -rf ./`basename $i`; done"
   },
   "dependencies": {
     "@types/debug": "^0.0.31",
@@ -39,10 +39,9 @@
     "@types/webdriverio": "^4.13.1",
     "colors": "^1.3.3",
     "spectron": "^5.0.0",
-    "electron": "^4.0.3",
+    "electron": "^4.0.4",
     "electron-download": "^4.1.1",
     "fs-extra": "^7.0.1",
-    "lerna": "^3.10.8",
     "terser": "^3.11.0",
     "tslint": "^5.12.0",
     "tslint-config-standard": "^8.0.1",
