--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/proxy",
-  "version": "0.5.9",
+  "version": "0.5.11",
   "description": "Kui package that offers a proxy server",
   "author": "Nick Mitchell",
   "license": "Apache-2.0",
@@ -20,9 +20,15 @@
     "kui-start-proxy": "./bin/start-proxy.sh"
   },
   "scripts": {
+    "prepack": "rm -rf dist && mkdir dist && tar -C ../../build/packages/$(basename `pwd`)/src --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
+    "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist",
     "build": "./build.sh",
     "build-docker": "docker build . -t kui-proxy",
     "start": "./bin/start-proxy.sh"
+  },
+  "kui": {
+    "headless": false,
+    "electron": false
   },
   "publishConfig": {
     "access": "public"
