--- a/plugins/plugin-apache-composer/package.json
+++ b/plugins/plugin-apache-composer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/plugin-apache-composer",
-  "version": "0.10.0",
+  "version": "0.10.2",
   "description": "Kui plugin for the Apache OpenWhisk Composer",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -21,13 +21,13 @@
   ],
   "main": "plugin.js",
   "scripts": {
-    "prepublishOnly": "rm -rf dist && mkdir dist && tar -C ../../build/plugins/$(basename `pwd`)/src --exclude test --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
+    "prepack": "rm -rf dist && mkdir dist && tar -C ../../build/plugins/$(basename `pwd`)/src --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
     "app-module-path": "^2.2.0",
     "expand-home-dir": "0.0.3",
-    "openwhisk-composer": "git://github.com:apache/incubator-openwhisk-composer.git"
+    "openwhisk-composer": "git+http://github.com/apache/incubator-openwhisk-composer.git"
   },
   "publishConfig": {
     "access": "public"
