--- a/plugins/plugin-openwhisk-debug/package.json
+++ b/plugins/plugin-openwhisk-debug/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/plugin-openwhisk-debug",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "description": "Kui plugin that lets users run and debug actions locally in a docker container",
   "license": "Apache-2.0",
   "author": "Kerry Chang",
@@ -21,7 +21,7 @@
   ],
   "main": "plugin.js",
   "scripts": {
-    "prepublishOnly": "rm -rf dist && mkdir dist && tar -C ../../build/plugins/$(basename `pwd`)/src --exclude test --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
+    "prepack": "rm -rf dist && mkdir dist && tar -C ../../build/plugins/$(basename `pwd`)/src --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
@@ -31,6 +31,10 @@
     "node-docker-api": "^1.1.22",
     "promise-retry": "^1.1.1",
     "tmp": "0.0.33"
+  },
+  "kui": {
+    "headless": false,
+    "webpack": false
   },
   "publishConfig": {
     "access": "public"
