--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -17,7 +17,7 @@
   ],
   "bin": {
     "kui-build-proxy": "./build.sh",
-    "kui-start-proxy": "./bin/start-proxy.sh"
+    "kui-run-proxy": "./bin/run-proxy.sh"
   },
   "scripts": {
     "prepack": "rm -rf dist && mkdir dist && tar -C ../../build/packages/$(basename `pwd`)/src --exclude node_modules -cf - . | tar -C dist -xf - && find dist -type l -exec rm {} \\; && cp -a dist/* .",
