chore(release): publish %s
 - @kui-shell/core@2.8.0
 - @kui-shell/builder@0.8.0
 - @kui-shell/proxy@0.8.0
 - @kui-shell/plugin-apache-composer@0.13.0
 - @kui-shell/plugin-bash-like@0.0.12
 - @kui-shell/plugin-core-support@0.8.0
 - @kui-shell/plugin-editor@0.0.12
 - @kui-shell/plugin-grid@0.0.11
 - @kui-shell/plugin-k8s@0.8.0
 - @kui-shell/plugin-manager@0.0.11
 - @kui-shell/plugin-openwhisk-debug@0.0.11
 - @kui-shell/plugin-openwhisk-editor-extensions@0.0.4
 - @kui-shell/plugin-openwhisk@0.8.0
 - @kui-shell/plugin-proxy-support@0.8.0
 - @kui-shell/plugin-tutorials@0.8.0
 - @kui-shell/plugin-wskflow@0.0.11

chore(release): publish %s

 - @kui-shell/core@2.8.1
 - @kui-shell/builder@0.8.1
 - @kui-shell/proxy@0.8.1
 - @kui-shell/plugin-apache-composer@0.13.1
 - @kui-shell/plugin-bash-like@0.0.13
 - @kui-shell/plugin-core-support@0.8.1
 - @kui-shell/plugin-editor@0.0.13
 - @kui-shell/plugin-grid@0.0.12
 - @kui-shell/plugin-k8s@0.8.1
 - @kui-shell/plugin-manager@0.0.12
 - @kui-shell/plugin-openwhisk-debug@0.0.12
 - @kui-shell/plugin-openwhisk-editor-extensions@0.0.5
 - @kui-shell/plugin-openwhisk@0.8.1
 - @kui-shell/plugin-proxy-support@0.8.1
 - @kui-shell/plugin-tutorials@0.8.1
 - @kui-shell/plugin-wskflow@0.0.12

bump

--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/proxy",
-  "version": "0.7.0",
+  "version": "0.8.1",
   "description": "Kui package that offers a proxy server",
   "author": "Nick Mitchell",
   "license": "Apache-2.0",
@@ -32,5 +32,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "23f5b4527bbb37d1853c0bf29b2f7e75a1a17f4e"
 }
