--- a/plugins/plugin-openwhisk-editor-extensions/package.json
+++ b/plugins/plugin-openwhisk-editor-extensions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/plugin-openwhisk-editor-extensions",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "Kui plugin for OpenWhisk that extends plugin-editor",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -27,5 +27,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "23f5b4527bbb37d1853c0bf29b2f7e75a1a17f4e"
 }
