--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "kui-shell",
   "version": "2.0.5",
-  "description": "[![Travis](https://travis-ci.org/ibm-functions/shell.svg?branch=master)](https://travis-ci.org/ibm-functions/shell) [![License](https://img.shields.io/badge/license-Apache--2.0-blue.svg)](http://www.apache.org/licenses/LICENSE-2.0) [![Join Slack](https://img.shields.io/badge/join-slack-9B69A0.svg)](http://slack.openwhisk.org/) [![codecov](https://codecov.io/gh/ibm-functions/shell/branch/master/graph/badge.svg)](https://codecov.io/gh/ibm-functions/shell) [![HitCount](http://hits.dwyl.io/ibm-functions/shell.svg)](http://hits.dwyl.io/ibm-functions/shell)",
+  "description": "This is the monorepo for Kui, the hybrid command-line/GUI electron-based Kubernetes tool",
   "main": "build/packages/app/src/main/main.js",
   "scripts": {
     "lint": "./packages/kui-builder/bin/lint.sh",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cd packages/tests && npm run test",
     "compile": "MONOREPO_MODE=true CLIENT_HOME=./clients/default ./packages/kui-builder/bin/compile.sh",
     "watch": "./packages/kui-builder/bin/watch.sh",
     "build:configure": "CLIENT_HOME=./clients/default node packages/kui-builder/lib/configure.js && CLIENT_HOME=./clients/default ./packages/kui-builder/dist/dev/build.sh && CLIENT_HOME=./clients/default ./packages/kui-builder/bin/seticon.js",
@@ -22,12 +22,13 @@
     "url": "git+https://github.com/IBM/kui.git"
   },
   "keywords": [
-    "OpenWhisk",
     "CLI",
     "UI",
+    "tool",
     "kubernetes",
     "visualization",
     "serverless",
+    "OpenWhisk",
     "electron"
   ],
   "author": {
