fix(packages/tests): remove bin/corral from test runner Fixes #510
also removes unnecessary references to TEST_ROOT
Fixes #425

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "compile": "MONOREPO_MODE=true CLIENT_HOME=./clients/default ./packages/kui-builder/bin/compile.sh",
     "watch": "./packages/kui-builder/bin/watch.sh",
     "build:configure": "CLIENT_HOME=./clients/default node packages/kui-builder/lib/configure.js && CLIENT_HOME=./clients/default ./packages/kui-builder/dist/dev/build.sh && CLIENT_HOME=./clients/default ./packages/kui-builder/bin/seticon.js",
-    "build:electron-for-development": "(cd packages/tests && ./bin/corral.sh) && npm run build:configure && npm run compile && for i in plugins/*; do if [ -d $i/node_modules ]; then (cd build/plugins/`basename $i` && rm -rf node_modules && cp -a ../../../$i/node_modules .); fi; done && (cd packages/tests && ./bin/corral.sh)",
+    "build:electron-for-development": "npm run build:configure && npm run compile && for i in plugins/*; do if [ -d $i/node_modules ]; then (cd build/plugins/`basename $i` && rm -rf node_modules && cp -a ../../../$i/node_modules .); fi; done",
     "build:hoist": "npx lerna bootstrap --ignore-prepublish --hoist",
     "postinstall": "npm run build:hoist && npm run build:electron-for-development"
   },
