fix(plugins/plugin-apache-composer): add missing deps to package.json
Fixes #565

--- a/plugins/plugin-apache-composer/package.json
+++ b/plugins/plugin-apache-composer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/plugin-apache-composer",
-  "version": "0.16.0",
+  "version": "0.16.1",
   "description": "Kui plugin for the Apache OpenWhisk Composer",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "app-module-path": "^2.2.0",
+    "debug": "^4.1.1",
     "expand-home-dir": "0.0.3",
     "openwhisk-composer": "git+http://github.com/apache/incubator-openwhisk-composer.git"
   },
