--- a/plugins/plugin-openwhisk-editor-extensions/package.json
+++ b/plugins/plugin-openwhisk-editor-extensions/package.json
@@ -28,5 +28,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "89de9f78e8a1a2bdd29d2e17d7c608ab006c6d32"
+  "gitHead": "89de9f78e8a1a2bdd29d2e17d7c608ab006c6d32",
+  "dependencies": {
+    "debug": "^4.1.1"
+  }
 }
