--- a/plugins/plugin-core-support/package.json
+++ b/plugins/plugin-core-support/package.json
@@ -25,10 +25,10 @@
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
-    "about-window": "^1.12.1",
     "colors": "^1.3.3",
     "debug": "^4.1.1",
     "expand-home-dir": "0.0.3",
+    "marked": "^0.6.1",
     "tmp": "0.0.33"
   },
   "publishConfig": {
