test: macOs electron test for travis matrix 1
Fixes #974

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ language: node_js
 node_js: 8
 dist: trusty
 
+os:
+  - linux
+  - osx
+
 env:
   matrix:
     - SCRIPTS="lint.sh"
@@ -49,15 +53,22 @@ env:
     - LOCAL_OPENWHISK=true # allows e.g. openwhisk/src/test/openwhisk1/headless to avoid trying to host set <not-local>
     - IGNORE_CERTS=true # apache-composer needs this, because it doesn't obey INSECURE_SSL in wskprops
     - PATH=bin:$PATH
-    - NO_MAC_DMG_INSTALLER=true # we can't build macOS DMG files in travis :(
+    - NO_MAC_DMG_INSTALLER=`[ "${TRAVIS_OS_NAME}" == linux ]; echo true` # we can't build macOS DMG files in linux travis :(
     - WINDOW_WIDTH=1400                   # ! important ! so that clicks don't fail due to elements being off-viewport
     - WINDOW_HEIGHT=1050                  # ! ibid !
-    - TEST_FROM_BUILD="${TRAVIS_BUILD_DIR}/clients/default/dist/electron/Kui-linux-x64/Kui" # test against a specific dist build
+    - LINUX_BUILD="${TRAVIS_BUILD_DIR}/clients/default/dist/electron/Kui-linux-x64/Kui" # test against linux electron build
+    - OSX_BUILD="${TRAVIS_BUILD_DIR}/clients/default/dist/electron/Kui-darwin-x64/Kui.app/Contents/MacOS/Kui" # test against darwin electron build
+    - TEST_FROM_BUILD=`[ "${TRAVIS_OS_NAME}" == linux ] && echo "${LINUX_BUILD}" || echo "${OSX_BUILD}"`
     - BUILD_ENV=production                # please note: used in dist/electron/build.sh with npm prune --production
 
 install: ./tools/travis/test/install.sh
 script: ./tools/travis/test/script.sh
 after_success: ./tools/travis/publishers/cos.sh
+
+addons:
+  homebrew:
+    packages:
+    - gnu-tar
 
 notifications:
   webhooks:
